--- a/client/src/css/HomePage.css
+++ b/client/src/css/HomePage.css
@@ -2,3 +2,20 @@
     max-width: 100%;
     height: auto;
 }
+
+.welcome-text {
+    color: rgb(67, 124, 240);
+}
+
+.button1 {
+    background-color: #4CAF50; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 12px;
+    font-size: 16px;
+
+}
