--- a/client/src/css/HomePage.css
+++ b/client/src/css/HomePage.css
@@ -3,19 +3,46 @@
     height: auto;
 }
 
-.welcome-text {
-    color: rgb(67, 124, 240);
+.top {
+    color: #5bace4;
+    text-align: center;
 }
 
 .button1 {
-    background-color: #4CAF50; 
+    background-color: #f60a8f; 
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    border-radius: 12px;
+    display: block;
     font-size: 16px;
-
+    max-width: 100%;
+    transition-duration: 0.4s;
 }
+
+.button1:hover {
+    background-color: black;
+}
+    
+
+
+    
+
+
+.button1 a {
+    text-decoration: none; 
+    color: white; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+}
+
+.welcome-image {
+    text-align: center;
+    max-width: 100%
+}
+
+.change-user {
+    color: green;
+}
+
+
