--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -3,7 +3,7 @@
     background-color: rgb(0, 0, 0);
     overflow: hidden;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
+    
   }
   
   
@@ -25,7 +25,7 @@
   
   
   .NavBar a.active {
-    background-color: #04AA6D;
+    background-color: #5bace4;
     color: white;
   }
   
