--- a/charity_client/src/App.css
+++ b/charity_client/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.Collapsible {
+  background-color: rgb(93, 180, 93);
+  width: 270px;
+  border: black;
+}
