--- a/client/src/css/HomePage.css
+++ b/client/src/css/HomePage.css
@@ -6,9 +6,12 @@
 .top {
     color: #5bace4;
     text-align: center;
+    background-color:rgb(240, 240, 240);
+    padding-top: 3px;
+    
 }
 
-.button1 {
+.button2 {
     background-color: #f60a8f; 
     border: none;
     color: white;
@@ -19,30 +22,95 @@
     font-size: 16px;
     max-width: 100%;
     transition-duration: 0.4s;
+    position: relative;
 }
 
-.button1:hover {
+.button2:hover {
     background-color: black;
 }
-    
-
 
     
 
-
-.button1 a {
+.button2 a {
     text-decoration: none; 
+    font-size: 30px;
     color: white; 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 }
 
 .welcome-image {
     text-align: center;
-    max-width: 100%
+    max-width: 100%;
+    
 }
 
-.change-user {
-    color: green;
+
+
+.welcome-container {
+    position:relative;
+    
+
 }
+
+.button1 {
+    background-color: #86c55d;; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    max-width: 100%;
+    transition-duration: 0.4s;
+    position: relative;
+    margin-bottom: 3px;
+}
+
+.button1:hover {
+    background-color: black;
+}
+
+    
+
+.button1 a {
+    text-decoration: none; 
+    font-size: 30px;
+    color: white; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+}
+
+
+.button3 {
+    background-color: #5bace4; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    max-width: 100%;
+    transition-duration: 0.4s;
+    position: relative;
+    margin-top: 3px;
+}
+
+.button3:hover {
+    background-color: black;
+}
+
+    
+
+.button3 a {
+    text-decoration: none; 
+    font-size: 30px;
+    color: white; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+}
+
+
+
+
 
 
