--- a/client/src/css/RewardDetails.css
+++ b/client/src/css/RewardDetails.css
@@ -1,11 +1,13 @@
 .reward-detail {
     background-color: rgb(216, 216, 216);
     padding: 20px;
-    
+    border: 5px solid rgb(0, 0, 0);
+    border-style: dashed;
+    margin: 10px;
+    text-align: center;
 }
-
 .reward-detail button {
-    background-color: #f60a8f;
+    background-color: #F60A8F;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -13,7 +15,5 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    
-
 }
 
