some edits in populate and css for collapsibles

--- a/charity_client/src/App.css
+++ b/charity_client/src/App.css
@@ -39,4 +39,11 @@
 
 .Collapsible {
   background-color: rgb(93, 180, 93);
+  border: solid 1px black;
+  padding: 5px;
+}
+
+.Collapsible__trigger{
+  cursor:pointer;
+  font-weight: bold;
 }
