--- a/client/src/css/ActivityDetails.css
+++ b/client/src/css/ActivityDetails.css
@@ -13,6 +13,18 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    
+    cursor:pointer;
 
+}
+
+.Collapsible {
+    border: solid 1px white;
+    padding: 5px;
+    line-height: 1.5;
+}
+
+.Collapsible__trigger{
+    cursor:pointer;
+    display:block;
+    font-weight: bold;
 }
