--- a/client/src/css/ActivityDetails.css
+++ b/client/src/css/ActivityDetails.css
@@ -4,7 +4,7 @@
     
 }
 
-.activity-detail button {
+.button {
     background-color: #86c55d;
     border: none;
     color: white;
@@ -14,11 +14,9 @@
     display: inline-block;
     font-size: 16px;
     cursor:pointer;
-
 }
 
 .Collapsible {
-    border: solid 1px white;
     padding: 5px;
     line-height: 1.5;
 }
