--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -1,61 +1,103 @@
-
-.NavBar {
+/* 
+.nav-bar {
     background-color: rgb(0, 0, 0);
     overflow: hidden;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
-  }
+}
   
   
-  .NavBar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
+.nav-bar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
   
   
-  .NavBar a:hover {
-    background-color: #F60A8F;
-    color: black;
-  }
+.nav-bar a:hover {
+  background-color: #F60A8F;
+  color: black;
+}
   
   
-  .NavBar a.active {
-    background-color: #5bace4;
-    color: white;
-  }
+.nav-bar a.active {
+  background-color: #5bace4;
+  color: white;
+}
   
-  .NavBar .icon {
-    display: none;
-  }
+.nav-bar .icon {
+  display: none;
+}
 
 
 @media screen and (max-width: 600px) {
-    .NavBar link:not(:first-child) {display: none;}
-    .NavBar link.icon {
-      float: right;
-      display: block;
-    }
+  .nav-bar link:not(:first-child) {display: none;}
+  .nav-bar link.icon {
+    float: right;
+    display: block;
+  }
+}
+  
+@media screen and (max-width: 600px) {
+  .nav-bar.responsive {position: relative;}
+  .nav-bar.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .nav-bar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+} */
+
+
+#nav-container {
+  margin: auto;
+  text-align: center;
+}
+
+
+.nav-bar {
+  position: relative;
+  background-color: rgb(0, 0, 0);
+  overflow: hidden;  
+
+}
+
+.nav-bar a {
+  float: left;
+  color: #f2f2f2;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  padding: 16px 26px;
+  text-decoration: none;
+  font-size: 20px;
+  
+  
+}
+
+.nav-bar a:hover {
+  background-color: #F60A8F;
+}
+
+
+
+/* @media screen and (max-width: 600px) { */
+  .nav-bar, .nav-bar a {
+    float: none;
+    display: block;
   }
   
-  @media screen and (max-width: 600px) {
-    .NavBar.responsive {position: relative;}
-    .NavBar.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .NavBar.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
+  /* .nav-bar-centered a {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
+  } */
 
-  .NavBar ul {
-    list-style-type: none;
-  }
